--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Description for youtube downloader",
   "main": "index.js",
   "dependencies": {
-    "express": "latest"
+    "express": "^4.20.0"
   },
   "author": "",
   "license": "ISC"
