--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Description for youtube downloader",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.20.0",
-    "cors" : "latest"
+    "express": "^4.20.0"
   },
   "author": "",
   "license": "ISC"
